--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161768304-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-161768304-2');
+    </script>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,6 +19,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta 
+      name="keywords"
+      content=""
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -16,7 +30,7 @@
     <link rel="stylesheet" href="/style.css">
 
 
-    <title>Строим с Нами</title>
+    <title>Установка и Покраска Еврозабора в Полтаве — Строим с Нами</title>
   </head>
   <body>
 
